# MathApp

./: .gitignore  README.md
backend/: Cargo.toml
backend/cpp/: Huffman.hpp  Jones.hpp  arithmetic_code.hpp  craft.hpp  huffmanBlock.hpp  lz78.hpp  markov.hpp
backend/crates/coding/: Cargo.toml
backend/crates/coding/examples/: bch_examples.rs  cyclic_examples.rs  gf256_examples.rs  gfp_examples.rs  linear_hamming_examples.rs  rs_examples.rs
backend/crates/coding/src/: bch.rs  code_utils.rs  codec_common.rs  cyclic.rs  error.rs  gf256.rs  gfext.rs  hamming.rs  lfsr.rs  lib.rs  linear.rs  poly.rs  prime.rs  rs.rs  types.rs
backend/crates/coding/tests/: bch_cyclic_examples_spec.rs  bch_field_spec.rs  code_utils_spec.rs  decoders_spec.rs  gf256_poly_spec.rs  gfext_cyclic_spec.rs  gfext_small_spec.rs  gfp_basic_spec.rs  linear_hamming_spec.rs  rs_basic_spec.rs  rs_decode_spec.rs  weight_dist_spec.rs
backend/crates/concrete-math/: Cargo.toml  README.md
backend/crates/concrete-math/examples/: combinatorics.rs  sum_and_discrete.rs
backend/crates/concrete-math/src/: error.rs  lib.rs
backend/crates/concrete-math/tests/: combinatorics_spec.rs  discrete_spec.rs  recurrence_relation_spec.rs  sum_spec.rs
backend/crates/convolution/: Cargo.toml
backend/crates/convolution/src/: error.rs  lib.rs
backend/crates/fft-core/: Cargo.toml
backend/crates/fft-core/src/: error.rs  lib.rs
backend/crates/finite-field/: Cargo.toml
backend/crates/finite-field/examples/: gf256_examples.rs  gfext_display.rs  gfp_examples.rs
backend/crates/finite-field/src/: error.rs  field2m.rs  gf256.rs  gfext.rs  gfp.rs  lib.rs  primitive.rs
backend/crates/finite-field/tests/: gf256_poly_spec.rs  gfext_small_spec.rs  gfp_basic_spec.rs
backend/crates/linalg/: Cargo.toml
backend/crates/linalg/examples/: advanced_examples.rs  base_example.rs  eigen_qr_example.rs  qr_example.rs  svd_example.rs  vector_example.rs
backend/crates/linalg/src/: error.rs  lib.rs  macros.rs  matrix.rs  traits.rs  vector.rs
backend/crates/linalg/tests/: complex_tests.rs  cross_checks_spec.rs  eigen_complex_spec.rs  eigen_decomposition.rs  linalg_tests.rs  lu_decomposition_test.rs  matrix_tests.rs  mod.rs  qr_decomposition_test.rs  qr_lu_f64_spec.rs  qr_lu_smoke_spec.rs  svd_decomposition_test.rs  svd_f64_spec.rs  vector_test.rs
backend/crates/lti-systems/: Cargo.toml
backend/crates/lti-systems/examples/: block_diagram_example.rs  bode_continuous_example.rs  bode_example.rs  diagram_ir_example.rs  nyquist_example.rs  statespace_example.rs  zpk_example.rs
backend/crates/lti-systems/src/: continuous.rs  conversions.rs  diagram.rs  discrete.rs  error.rs  lib.rs  plot.rs  responses.rs  statespace.rs  transfer.rs  zpk.rs
backend/crates/lti-systems/tests/: bode_spec.rs  discrete_responses_spec.rs  discrete_tests.rs  nyquist_spec.rs  responses_continuous_spec.rs  zpk_roundtrip_spec.rs  zpk_spec.rs
backend/crates/number-theory/: Cargo.toml
backend/crates/number-theory/src/: error.rs  lib.rs  prime_factorization.rs
backend/crates/number-theory/tests/: prime_factorization_spec.rs  quadratic_sieve_spec.rs
backend/crates/polynomial/: Cargo.toml
backend/crates/polynomial/examples/: combinatorics.rs  gauss_legendre.rs  partial_fraction.rs  special_polynomials.rs  sum_and_discrete.rs
backend/crates/polynomial/src/: error.rs  format.rs  lib.rs  macros.rs
backend/crates/polynomial/tests/: combinatorics_spec.rs  discrete_spec.rs  jenkins_traub_higher_degree_spec.rs  jenkins_traub_spec.rs  partial_fraction_spec.rs  recurrence_relation_spec.rs  special_polynomials_spec.rs  sum_spec.rs
backend/crates/signal_processing/: Cargo.toml
backend/crates/signal_processing/examples/: ascii_plot.rs  fir_ascii_response.rs  fir_svg_compare_windows.rs  fir_svg_response.rs  generate_media_inputs.rs  iir_butter_ascii_response.rs  iir_impulse_demo.rs  image_batch_process.rs  image_color_filters.rs  image_denoise.rs  image_dft_demo.rs  image_dft_spectrum.rs  image_gaussian_unsharp.rs  lms_vs_nlms_noise_cancellation.rs  lms_vs_nlms_system_id_ascii.rs  media_audio_filter_demo.rs  media_image_audio_demo.rs  media_image_filter_demo.rs  nlms_system_id_ascii.rs  plot_signal_and_spectrum.rs  sampling_demo.rs
backend/crates/signal_processing/src/: adaptive_filter.rs  dft.rs  error.rs  fir.rs  iir.rs  lib.rs  media.rs  plot.rs  sampling.rs  signal.rs  window.rs
backend/crates/signal_processing/tests/: conv_with_dft_spec.rs  dft_spec.rs  fft_spec.rs  fir_spec.rs  ifft_spec.rs  iir_spec.rs  image_batch_process_spec.rs  image_color_spec.rs  image_filters_spec.rs  lms_spec.rs  media_spec.rs  nlms_spec.rs  sampling_spec.rs  signal_sampling_impl_spec.rs
backend/crates/source-coding/: Cargo.toml
backend/crates/source-coding/src/: arithmetic.rs  craft.rs  elias.rs  huffman.rs  huffman_block.rs  jones.rs  lib.rs  lz78.rs  markov.rs
backend/crates/source-coding/tests/: arithmetic_spec.rs  elias_spec.rs  huffman_block_spec.rs  huffman_spec.rs  jones_spec.rs  lz78_spec.rs  markov_spec.rs
backend/crates/special-functions/: Cargo.toml
backend/crates/special-functions/src/: beta.rs  erf.rs  gamma.rs  lib.rs
backend/crates/special-functions/tests/: beta_spec.rs  gamma_spec.rs
backend/crates/statistics/: Cargo.toml
backend/crates/statistics/examples/: dirichlet.rs  distributions.rs  hypothesis.rs  multinomial.rs  mvnormal.rs  mvt.rs  plot.rs
backend/crates/statistics/src/: common.rs  continuous_stats.rs  discrete_stats.rs  error.rs  hypothesis.rs  lib.rs  plot.rs
backend/crates/statistics/tests/: basic_spec.rs  dirichlet_spec.rs  error_spec.rs  gamma_spec.rs  hypothesis_spec.rs  multinomial_spec.rs  multivariate_normal_spec.rs  multivariate_t_spec.rs
backend/crates/statsmodels/: Cargo.toml
backend/crates/statsmodels/examples/: bayesian_em_multidim.rs  bayesian_example.rs  gmm_example.rs  kalman_example.rs  lasso_example.rs  logistic_example.rs  ols_pinv_example.rs  ols_solve_example.rs  ridge_example.rs
backend/crates/utils/: Cargo.toml
backend/crates/wasm/: Cargo.toml  README.md
backend/crates/wasm-macros/: Cargo.toml
(+503 files in other folders)
