[package]
name = "coding"
version = "0.1.0"
edition = "2021"

[dependencies]
linalg = { path = "../linalg" }
polynomial = { package = "poly", path = "../polynomial" }
num-traits = "0.2"
serde = { version = "1", features = ["derive" ] }
finite-field = { path = "../finite-field" }

[dev-dependencies]
pretty_assertions = "1"
