# crates/linalg/Cargo.toml

[package]
name = "linalg"
version = "0.1.0"
edition = "2021"

# このセクションは、このクレートがライブラリであることを示す
[lib]
name = "linalg"
path = "src/lib.rs"

# features
[features]
default = []
serde = ["dep:serde"]

# linalgクレートが直接依存するライブラリがあればここに記述
[dependencies]
num-traits = "0.2"
num-complex = "0.4"
fft-core = { path = "../fft-core" }
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"], optional = true }