[package]
name = "signal_processing"
version = "0.1.0"
edition = "2021"

[lib]
name = "signal_processing"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
linalg = { path = "../linalg" }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
hound = "3"
lti_systems = { package = "lti-systems", path = "../lti-systems" }
polynomial = { package = "poly", path = "../polynomial" }
fft-core = { path = "../fft-core" }

[dev-dependencies]
textplots = "0.8"